--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
     }
   },
   "require": {
-    "illuminate/support": "^5.4"
+    "illuminate/support": "~5.3.0|~5.4.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^3.4",
+    "orchestra/testbench": "~3.3.0|~3.4.0",
     "phpunit/phpunit": "^5.7",
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^2.7"
