--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
 language: php
-php:
-  - 5.6
-  - 7.0
-  - 7.1
-  - hhvm
-  - nightly
 
 sudo: false
 
@@ -13,11 +7,47 @@ notifications:
         on_success: never
         on_failure: always
 
+matrix:
+  include:
+    - php: 5.5.9
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.5.9
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.5
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.5
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.3.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.4.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.1.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.2.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.3.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.4.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.1.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.2.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.3.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.4.*
+
 before_install:
-  - travis_retry composer self-update
+  - travis_retry composer self-update --stable -n
+  - composer require "laravel/framework:${LARAVEL_VERSION}" --no-update -n
 
 install:
-  - travis_retry composer install --no-interaction
+  - travis_retry composer install --no-suggest --prefer-dist -n -o
 
 script:
   - composer run phpunit
