--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     }
   },
   "require": {
-    "illuminate/support": "~5.3.0|~5.4.0"
+    "illuminate/support": "~5.1.0|~5.2.0|~5.3.0|~5.4.0"
   },
   "require-dev": {
     "orchestra/testbench": "~3.3.0|~3.4.0",
