--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "illuminate/support": "~5.1.0|~5.2.0|~5.3.0|~5.4.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.3.0|~3.4.0",
+    "orchestra/testbench": "~3.1.0|~3.2.0|~3.3.0|~3.4.0",
     "phpunit/phpunit": "^5.7",
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^2.7"
