--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "require-dev": {
     "orchestra/testbench": "~3.1.0|~3.2.0|~3.3.0|~3.4.0",
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "~4.0|~5.0",
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^2.7"
   },
