--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,15 @@
     "orchestra/testbench": "~3.1.0|~3.2.0|~3.3.0|~3.4.0",
     "phpunit/phpunit": "~4.0|~5.0",
     "phpmd/phpmd": "^2.6",
-    "squizlabs/php_codesniffer": "^2.7"
+    "squizlabs/php_codesniffer": "^2.7",
+    "sebastian/phpcpd": "^3.0"
   },
   "scripts": {
     "phpunit": "phpunit",
     "phpmd": "phpmd src/LaravelEnvValidator text ./phpmd-rules.xml",
     "phpcs": "phpcs --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
-    "phpcbf": "phpcbf --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator"
+    "phpcbf": "phpcbf --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
+    "phpcpd": "phpcpd src/LaravelEnvValidator"
   },
   "extra": {
     "laravel": {
