--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,11 @@
     }
   },
   "require": {
-    "illuminate/support": "~5.1.0|~5.2.0|~5.3.0|~5.4.0"
+    "php": ">=5.6.4",
+    "illuminate/support": "~5.2.0|~5.3.0|~5.4.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.1.0|~3.2.0|~3.3.0|~3.4.0",
+    "orchestra/testbench": "~3.2.0|~3.3.0|~3.4.0",
     "phpunit/phpunit": "~4.0|~5.0",
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^2.7",
