--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
   },
   "require-dev": {
     "orchestra/testbench": "~3.2.0|~3.3.0|~3.4.0",
-    "phpunit/phpunit": "~4.0|~5.0",
     "phpmd/phpmd": "^2.6",
-    "squizlabs/php_codesniffer": "^2.7",
-    "sebastian/phpcpd": "^3.0"
+    "phpunit/phpunit": "~4.0|~5.0",
+    "sebastian/phpcpd": "^3.0",
+    "squizlabs/php_codesniffer": "^2.7"
   },
   "scripts": {
     "phpunit": "phpunit",
@@ -48,5 +48,10 @@
         "Melihovv\\LaravelEnvValidator\\ServiceProvider"
       ]
     }
+  },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
   }
 }
