--- a/composer.json
+++ b/composer.json
@@ -25,18 +25,18 @@
     }
   },
   "require": {
-    "php": ">=5.6.4",
-    "illuminate/support": "~5.2.0|~5.3.0|~5.4.0"
+    "php": ">=7.0",
+    "illuminate/support": "~5.5.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.2.0|~3.3.0|~3.4.0",
+    "orchestra/testbench": "~3.5.0",
     "phpmd/phpmd": "^2.6",
-    "phpunit/phpunit": "~4.0|~5.0",
+    "phpunit/phpunit": "~6.0",
     "sebastian/phpcpd": "^3.0",
     "squizlabs/php_codesniffer": "^2.7"
   },
   "scripts": {
-    "phpunit": "phpunit",
+    "phpunit": "phpunit --dont-report-useless-tests",
     "phpmd": "phpmd src/LaravelEnvValidator text ./phpmd-rules.xml",
     "phpcs": "phpcs --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
     "phpcbf": "phpcbf --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
