--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
   },
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "~5.5.0"
+    "illuminate/support": "~5.5.0|~5.6.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.5.0",
+    "orchestra/testbench": "~3.5.0|~3.6.0",
     "phpmd/phpmd": "^2.6",
-    "phpunit/phpunit": "~6.0",
+    "phpunit/phpunit": "~6.0|~7.0",
     "sebastian/phpcpd": "^3.0",
     "squizlabs/php_codesniffer": "^2.7"
   },
