--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
   },
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "~5.5.0|~5.6.0"
+    "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.5.0|~3.6.0",
+    "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
     "phpmd/phpmd": "^2.6",
     "phpunit/phpunit": "~6.0|~7.0",
     "sebastian/phpcpd": "^3.0",
