--- a/composer.json
+++ b/composer.json
@@ -26,22 +26,16 @@
     }
   },
   "require": {
-    "php": ">=7.0",
-    "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+    "php": ">=7.2",
+    "illuminate/support": "^6.0",
+    "illuminate/validation": "^6.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0",
-    "phpmd/phpmd": "^2.6",
-    "phpunit/phpunit": "~6.0|~7.0",
-    "sebastian/phpcpd": "^3.0",
-    "squizlabs/php_codesniffer": "^2.7"
+    "orchestra/testbench": "^4.0",
+    "phpunit/phpunit": "^8.0"
   },
   "scripts": {
-    "phpunit": "phpunit --dont-report-useless-tests",
-    "phpmd": "phpmd src/LaravelEnvValidator text ./phpmd-rules.xml",
-    "phpcs": "phpcs --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
-    "phpcbf": "phpcbf --standard=./phpcs-rules.xml --encoding=utf-8 src/LaravelEnvValidator",
-    "phpcpd": "phpcpd src/LaravelEnvValidator"
+    "phpunit": "phpunit --dont-report-useless-tests"
   },
   "extra": {
     "laravel": {
