--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,9 +1,1 @@
-preset: recommended
-enabled:
-  - concat_with_spaces
-disabled:
-  - align_double_arrow
-  - phpdoc_to_comment
-  - phpdoc_var_without_name
-  - concat_without_spaces
-  - no_multiline_whitespace_around_double_arrow
+preset: laravel
