--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.4, 7.3]
+        php: [7.4, 7.3, 7.2]
         laravel: [8.*, 7.*, 6.*]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest, windows-latest]
@@ -22,6 +22,9 @@ jobs:
             testbench: 5.*
           - laravel: 6.*
             testbench: 4.*
+        exclude:
+            - laravel: 8.*
+              php: 7.2
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
