--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,11 +11,13 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.4, 7.3, 7.2]
-        laravel: [8.*, 7.*, 6.*]
+        php: [8.1, 8.0, 7.4, 7.3, 7.2]
+        laravel: [9.*, 8.*, 7.*, 6.*]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest, windows-latest]
         include:
+          - laravel: 9.*
+            testbench: 7.*
           - laravel: 8.*
             testbench: 6.*
           - laravel: 7.*
@@ -25,6 +27,12 @@ jobs:
         exclude:
             - laravel: 8.*
               php: 7.2
+            - laravel: 9.*
+              php: 7.2
+            - laravel: 9.*
+              php: 7.3
+            - laravel: 9.*
+              php: 7.4
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
